--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.7.1",
+    "react-image-gallery": "^1.2.11",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.7.0",
