--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.6.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
