--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "flowbite": "^1.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.7.1",
