--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "clsx": "^2.0.0",
     "flowbite": "^1.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -23,6 +24,7 @@
     "react-show-more-text": "^1.6.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^9.3.2",
