--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "clsx": "^2.0.0",
     "flowbite": "^1.8.1",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-bootstrap": "^2.7.0",
     "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-image-gallery": "^1.2.11",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-show-more-text": "^1.6.2",
