--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /build
 /.pnp
 .pnp.js
-
+node_modules 
 # testing
 /coverage
 
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.codegpt
