--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.7",
     "react-bootstrap": "^2.10.0",
+    "react-chatbot-kit": "^2.2.2",
+    "react-chatbotify": "^1.5.2",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
@@ -23,13 +25,14 @@
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.21.3",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
     "react-show-more-text": "^1.7.1",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.11",
     "swiper": "^11.0.5",
     "web-vitals": "^3.5.1"
   },
